--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -2,7 +2,7 @@
         <div class="row">
             <div class="col-md-10 col-12 mx-auto">
                 <nav class="navbar navbar-expand-lg">
-                    <a class="navbar-brand" href="/index"> 
+                    <a class="navbar-brand" href="/"> 
                         <i class="fa-solid fa-snowflake"></i> 
                             City Weather
                         <i class="fa-solid fa-snowflake"></i>
